--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
